# HaskellRosalind

./: .gitignore  README.md  Rosalind.cabal  cabal.project  cabal.project.local  hie.yaml  old-cabal.project
.github/workflows/: haskell.yml  haskellMatix.yml
Data/: orf_example2.txt  orf_example2_expected.out  revc.out  revc_example.txt  rna.out  rna.txt
app/: CLI.hs  CommandExecuter.hs  RosalindProblemRunner.hs
app/Rosalind/CLI/: CliProgram.hs  Console.hs  FileSystem.hs  ProblemRunner.hs  ProblemRunnerParser.hs  RouteCommands.hs  Server.hs
generators/: GeneratorCLI.hs  Main.hs  PurescriptGenerator.hs
generators/Rosalind/GeneratorCLI/: GeneratorCLI.hs  GeneratorParser.hs  PurescriptGenerator.hs
server/src/: Api.hs  Main.hs
server/src/Rosalind/Server/: Api.hs  App.hs
server/test/Spec/: ApiSpec.hs
src/Rosalind/: Codon2ProteinConv.hs  Common.hs  DnaBase.hs  FastQ.hs  Fasta.hs  Fastq.hs  GeneticStringConversion.hs  Motif.hs  ProteinWithStop.hs  RnaBase.hs  RosalindStrings.hs
src/Rosalind/CLI/: ProblemRunner.hs  ProblemRunnerParser.hs  RouteCommands.hs  SolverRunner.hs
src/Rosalind/Freer/: App.hs  ConsoleOut.hs  EnvArgs.hs  FileSystem.hs
src/Rosalind/Problems/: Cons.hs  Filt.hs  FiltDataset.hs  Frmt.hs  FrmtApp.hs  Gc.hs  Hamm.hs  Lexf.hs  Mrna.hs  Orf.hs  Perm.hs  Prot.hs  Prtm.hs  Revc.hs  Rna.hs  Subs.hs  Tran.hs
src/Rosalind/Services/: DataAccess.hs  Entrez.hs
test/: AutoTests.hs
test/Spec/Rosalind/: Common.hs  FastaHedgehogSpec.hs  FastqHedgehogSpec.hs  MotifHedgehogSpec.hs
test/Spec/Rosalind/CLI/: RnaHedgehogSpec.hs
test/Spec/Rosalind/Problems/: ConsHedgehogSpec.hs  FastaHedgehogSpec.hs  FiltHedgehogSpec.hs  GcHedgehogSpec.hs  HammHedgehogSpec.hs  HammSpec.hs  LexfHedgehogSpec.hs  OrfHedgehogSpec.hs  ProtHedgehogSpec.hs  RevcHedgehogSpec.hs  RevcSpec.hs  RnaHedgehogSpec.hs  SubsHedgehogSpec.hs  TranHedgehogSpec.hs
test/Spec/Rosalind/Problems/HedgehogProperties/: Gen.hs  RnaProperties.hs
