cabal-version:      3.0
name:               Rosalind
version:            0.1.0.0
synopsis:



extra-source-files:
    README.md


common base
  build-depends:       base >=4.14 && <5

common deps
  ghc-options:  -Wall                
                -fno-warn-incomplete-uni-patterns
                -Wincomplete-patterns             
                -Wincomplete-uni-patterns 
                -Wincomplete-record-updates 
                -Wmissing-fields   
                -Wunused-top-binds
                -Wunused-local-binds
                -Wunused-pattern-binds
                -Wunused-matches
                -Wunused-do-bind
                -Wunused-type-patterns
                -Wunused-foralls
                -Wunused-record-wildcards
                -Wredundant-record-wildcards
                -- -Wunused-packages
library Rosalind-lib
  import: base
  import: deps
  exposed-modules:  
                      Rosalind.CLI.RouteCommands     
                      Rosalind.CLI.ProblemRunnerParser
                      Rosalind.CLI.ProblemRunner 
                      Rosalind.Problems.Rna
                      Rosalind.Problems.Hamm
                      Rosalind.Problems.Revc
                      Rosalind.Problems.Tran
                      Rosalind.Problems.Gc
                      Rosalind.Problems.Prot
                      Rosalind.Problems.Orf
                      Rosalind.Problems.Subs 
                      Rosalind.Problems.Frmt 
                      Rosalind.Problems.FiltDataset
                      Rosalind.Problems.Filt
                      Rosalind.Problems.Lexf
                      Rosalind.Common
                      Rosalind.Codon2ProteinConv
                      Rosalind.DnaBase
                      Rosalind.RnaBase
                      Rosalind.Fasta
                      Rosalind.Fastq
                      Rosalind.GeneticStringConversion
                      Rosalind.Motif 
                      Rosalind.ProteinWithStop
                      Rosalind.RosalindStrings                                                                                       
                      Rosalind.Services.Entrez   
                      Rosalind.Services.DataAccess  
                      Rosalind.Freer.FileSystem
                      Rosalind.Freer.ConsoleOut                 
                      Rosalind.Freer.EnvArgs                 
  build-depends:      containers
                      , lens
                      , mtl
                      , text
                      , protolude
                      , transformers
                      , aeson
                      , lens-aeson
                      , raw-strings-qq
                      , generic-lens
                      , generic-lens-core                                                               
                      , bytestring
                      , directory
                      , random
                      , wai
                      , hspec
                      , QuickCheck
                      , parsec
                      , parsec-numbers
                      , conduit
                      , streaming
                      , text-show
                      , exceptions
                      , req
                      , either
                      , split                      
                      , ilist                  
                      , regex-posix
                      , array
                      , async
                      , errors
                      , parsec-numbers
                      , parsec-numeric     
                      , megaparsec   
                      , vector        
                      , template-haskell
                      , generic-monoid    
                      , servant-openapi3
                      , openapi3    
                      , servant
                      , extra 
                      , freer-simple   
                      , optparse-applicative  
                      , filepath             
  hs-source-dirs:   src/
  default-language: Haskell2010

test-suite Rosalind-test
    import: base
    import: deps
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/
    main-is:          Driver.hs
    build-tool-depends:
      tasty-discover:tasty-discover     
    other-modules: 
        Spec.Rosalind.Common
        Spec.Rosalind.Problems.RevcSpec  
        Spec.Rosalind.Problems.RevcHedgehogSpec  
        Spec.Rosalind.Problems.HammSpec  
        Spec.Rosalind.Problems.HammHedgehogSpec 
        Spec.Rosalind.Problems.RnaHedgehogSpec
        Spec.Rosalind.Problems.TranHedgehogSpec
        Spec.Rosalind.Problems.GcHedgehogSpec
        Spec.Rosalind.Problems.ProtHedgehogSpec
        Spec.Rosalind.Problems.OrfHedgehogSpec
        Spec.Rosalind.Problems.SubsHedgehogSpec
        Spec.Rosalind.FastaHedgehogSpec
        Spec.Rosalind.FastqHedgehogSpec
        Spec.Rosalind.MotifHedgehogSpec
        Spec.Rosalind.Problems.FiltHedgehogSpec
        Spec.Rosalind.Problems.LexfHedgehogSpec
    build-depends:     
        Rosalind-lib      
      , tasty                  
      , tasty-expected-failure
      , hedgehog               
      , tasty-hedgehog    
      , tasty-quickcheck   
      , hspec
      , containers
      , tasty-hunit
      , smallcheck       
      , lens
      , lens-aeson
      , containers
      , parsec
      , split
      , QuickCheck
      , aeson
      , tasty-th
      , HUnit
      , text
      , unordered-containers
      , megaparsec  
      , directory
      , filepath    
      , either
      , mtl
      , extra
      , optparse-applicative
      , freer-simple 
    ghc-options:         -Wall  
              -fno-warn-incomplete-uni-patterns
              -Wincomplete-patterns             
              -Wincomplete-uni-patterns 
              -Wincomplete-record-updates 
              -Wmissing-fields    


executable rosalind-cli
  import: base
  -- import: deps
  main-is: CLI.hs
  ghc-options:  -main-is CLI
  other-modules:
 
  hs-source-dirs: app/  
  build-depends:
      Rosalind-lib
    , optparse-applicative
    , text
    , timeit
    , directory
    , filepath
    , warp
    , rosalind-server
    , extra
    , freer-simple
    , mtl
  default-language: Haskell2010
  ghc-options:  
                -Wall  
                -fno-warn-incomplete-uni-patterns
                -Wincomplete-patterns             
                -Wincomplete-uni-patterns 
                -Wincomplete-record-updates 
                -Wmissing-fields    
                -Wall 
                ---Werror 
                -Wcompat 
                -Widentities -Wincomplete-uni-patterns 
                -Wincomplete-record-updates 
                -Wno-unused-top-binds 
                -Wno-orphans

library rosalind-server
  import: base
  import: deps
  other-modules:
  exposed-modules:
      Rosalind.Server.Api      
      Rosalind.Server.App      
  hs-source-dirs:
      server/src
  build-depends:
      aeson
    , containers
    , servant
    , servant-server
    , Rosalind-lib
    , text
    , wai
    , warp
    , servant-openapi3
    , openapi3
    , wai-logger
    , extra
  default-language: Haskell2010
  ghc-options:         -Wall  
              -fno-warn-incomplete-uni-patterns
              -Wincomplete-patterns             
              -Wincomplete-uni-patterns 
              -Wincomplete-record-updates 
              -Wmissing-fields    

test-suite rosalind-server-test
    import: base
    import: deps
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   server/test
    main-is:          Driver.hs
    build-tool-depends:
      tasty-discover:tasty-discover     
    other-modules:    
      Spec.ApiSpec   
    build-depends:     
        Rosalind-lib
      , rosalind-server

      , tasty                  
      , tasty-expected-failure
      , hedgehog               
      , tasty-hedgehog    
      , tasty-quickcheck   
      , hspec
      , containers
      , tasty-hunit
      , tasty-hspec
      , smallcheck   
      , tasty-th
      , HUnit
      , QuickCheck

      , lens
      , lens-aeson
      , containers
      , parsec
      , split
      
      , aeson
      
      , text
      , unordered-containers
      , megaparsec  
      , directory
      , filepath    
      , either
      , servant-client
      , servant-server
      , servant
      , wai
      , warp
      , http-client
      , extra
    ghc-options:         -Wall  
              -fno-warn-incomplete-uni-patterns
              -Wincomplete-patterns             
              -Wincomplete-uni-patterns 
              -Wincomplete-record-updates 
              -Wmissing-fields    

executable rosalind-generator  
  import: base
  import: deps
  main-is: Main.hs
  ghc-options:  -main-is Main
  other-modules:   
    Rosalind.GeneratorCLI.GeneratorCLI
    Rosalind.GeneratorCLI.GeneratorParser
    Rosalind.GeneratorCLI.PurescriptGenerator
  hs-source-dirs: generators/  
  ghc-options: 
  build-depends:
      Rosalind-lib
    , optparse-applicative
    , text
    , timeit
    , directory
    , filepath
    , warp
    , rosalind-server
    , extra
    , lens -any
    , purescript-bridge 
    , servant -any
    , servant-purescript
    , servant-server -any
    , text -any
    , aeson
    , servant-foreign
    , containers
  default-language: Haskell2010
  ghc-options:  -Wall  
                -fno-warn-incomplete-uni-patterns
                -Wincomplete-patterns             
                -Wincomplete-uni-patterns 
                -Wincomplete-record-updates 
                -Wmissing-fields    
                -Wall -Werror -Wcompat 
                -Widentities -Wincomplete-uni-patterns 
                -Wincomplete-record-updates 
                -Wno-unused-top-binds -Wno-orphans